--- a/index.html
+++ b/index.html
@@ -2,55 +2,215 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Belajar Tailwind</title>
-    <link rel="stylesheet" href="./style/output.css">
+    <link rel="stylesheet" href="./style/output.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
-
 </head>
 
-<body class="px-16 font-poppins">
+<body class="px-4 md:px-8 lg:px-16 font-poppins">
 
-    <header class="flex justify-between items-center border-b border-gray-200">
-        <div class="w-[150px]">
-            <img src="./image/logo.png" alt="" class="w-full h-full">
+    <!--Navbar-->
+    <header class="flex flex-wrap justify-between items-center border-b border-gray-200 py-4">
+        <div class="w-32 md:w-[150px]">
+            <img src="./image/logo.png" alt="" class="w-full h-full" />
         </div>
 
-        <ul class="relative flex items-center gap-6">
-            <li class="relative py-4 group">
+        <ul
+            class="w-full md:w-auto flex flex-wrap justify-center md:justify-start items-center gap-4 md:gap-6 mt-4 md:mt-0">
+            <li class="relative py-2 group">
                 <a class="group-hover:text-accent group-hover:font-bold" href="">Home</a>
-                <span class="absolute left-0 bottom-0 w-0 h-1 bg-accent group-hover:w-3/4 transition-all duration-300"></span>
+                <span
+                    class="absolute left-0 bottom-0 w-0 h-1 bg-accent group-hover:w-3/4 transition-all duration-300"></span>
             </li>
-            <li class="">
-                <a href="">Shop</a>
+            <li class="relative py-2 group">
+                <a class="group-hover:text-accent group-hover:font-bold" href="">Shop</a>
+                <span
+                    class="absolute left-0 bottom-0 w-0 h-1 bg-accent group-hover:w-3/4 transition-all duration-300"></span>
             </li>
-            <li class="">
-                <a href="">Plant Care</a>
+            <li class="relative py-2 group">
+                <a class="group-hover:text-accent group-hover:font-bold" href="">Plant Care</a>
+                <span
+                    class="absolute left-0 bottom-0 w-0 h-1 bg-accent group-hover:w-3/4 transition-all duration-300"></span>
             </li>
-            <li class="">
-                <a href="">Blogs</a>
+            <li class="relative py-2 group">
+                <a class="group-hover:text-accent group-hover:font-bold" href="">Blogs</a>
+                <span
+                    class="absolute left-0 bottom-0 w-0 h-1 bg-accent group-hover:w-3/4 transition-all duration-300"></span>
             </li>
         </ul>
 
-        <div class="flex gap-6 items-center">
-            <span class="material-symbols-outlined">
-                search
-                </span>
-
-            <span class="material-symbols-outlined">
-                    shopping_cart
-                    </span>
-
+        <div class="w-full md:w-auto flex justify-center md:justify-end gap-4 md:gap-6 items-center mt-4 md:mt-0">
+            <span class="material-symbols-outlined">search</span>
+            <span class="material-symbols-outlined">shopping_cart</span>
             <button class="flex gap-2 items-center bg-accent py-2 px-4 text-white rounded-md">
-                <span class="material-symbols-outlined">
-                    login
-                    </span>
+                <span class="material-symbols-outlined">login</span>
                 Login
             </button>
         </div>
-
     </header>
+
+    <!--Jumbotron-->
+    <section
+        class="bg-[#F5F5F5] mt-8 py-10 px-4 md:px-8 flex flex-col-reverse lg:flex-row justify-between items-center gap-8">
+        <div class="w-full lg:w-1/2 text-center lg:text-left">
+            <p class="text-dgray uppercase tracking-[0.1em] text-sm font-medium">WELCOME TO GREENSHOP</p>
+            <h1 class="text-4xl md:text-5xl lg:text-6xl text-dgray font-extrabold leading-tight mt-2">
+                LET'S MAKE A <br />BETTER
+                <span class="text-accent">PLANET</span>
+            </h1>
+            <p class="text-lgray mt-4 text-sm">
+                We are an online plant shop offering a wide range of cheap and trendy plants.
+                <br />
+                Use our plants to create an unique Urban Jungle. Order your favorite plants!
+            </p>
+            <button
+                class="mt-6 md:mt-8 bg-accent text-white py-3 px-6 rounded-md text-sm font-bold shadow-md hover:bg-green-700 transition-all">
+                SHOP NOW
+            </button>
+        </div>
+        <div class="w-full lg:w-1/3">
+            <img src="./image/mainplant.png" alt="Main Plant" class="w-full h-auto mx-auto" />
+        </div>
+    </section>
+
+    <!--Product-->
+    <section class="py-8 px-4 md:px-8">
+        <div class="flex flex-col lg:flex-row justify-between items-start lg:items-center border-b pb-4 gap-4">
+            <ul class="relative flex flex-wrap items-center gap-6 lg:gap-24">
+                <li class="relative py-2 group">
+                    <a class="group-hover:text-accent group-hover:font-light" href="">All Plants</a>
+                    <span
+                        class="absolute left-0 right-0 bottom-0 w-0 h-[3px] bg-accent group-hover:w-[120%] transition-all duration-300"></span>
+                </li>
+                <li class="relative py-2 group">
+                    <a class="group-hover:text-accent group-hover:font-light" href="">New Arrivals</a>
+                    <span
+                        class="absolute left-0 right-0 bottom-0 w-0 h-[3px] bg-accent group-hover:w-[120%] transition-all duration-300"></span>
+                </li>
+                <li class="relative py-2 group">
+                    <a class="group-hover:text-accent group-hover:font-light" href="">Sale</a>
+                    <span
+                        class="absolute left-0 right-0 bottom-0 w-0 h-[3px] bg-accent group-hover:w-[120%] transition-all duration-300"></span>
+                </li>
+            </ul>
+            <div class="w-full md:w-auto">
+                <label for="sort" class="text-dgray">Sort by:</label>
+                <select id="sort" class="border rounded-md px-2 py-1 w-full md:w-auto">
+                    <option>Default sorting</option>
+                </select>
+            </div>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-8">
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <img src="./image/plant1.png" alt="Plant 1" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Barberton Daisy</p>
+                <p class="text-accent font-semibold">$119.00</p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <img src="./image/plant2.png" alt="Plant 2" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Angel Wing Begonia</p>
+                <p class="text-accent font-semibold">$169.00</p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <span class="absolute top-4 left-4 bg-accent text-white px-2 py-1 text-xs rounded">13% OFF</span>
+                <img src="./image/plant3.png" alt="Plant 3" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">African Violet</p>
+                <p class="text-accent font-semibold">$199.00 <span
+                        class="text-lgray font-light line-through">$229.00</span></p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col overflow-hidden">
+                <img src="./image/plant4.png" alt="Plant 4" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Beach Spider Lily</p>
+                <p class="text-accent font-semibold">$129.00</p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <img src="./image/plant5.png" alt="Plant 5" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Blushing Bromeliad</p>
+                <p class="text-accent font-semibold">$139.00</p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <img src="./image/plant6.png" alt="Plant 6" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Bird's Nest Fern</p>
+                <p class="text-accent font-semibold">$99.00</p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <img src="./image/plant7.png" alt="Plant 7" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Broadleaf Lady Palm</p>
+                <p class="text-accent font-semibold">$59.00</p>
+            </div>
+            <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
+                <img src="./image/plant8.png" alt="Plant 8" class="w-[250px] h-[250px] object-cover mx-auto">
+                <p class="mt-4 font-light flex items-center">Aluminum Plant</p>
+                <p class="text-accent font-semibold">$179.00</p>
+            </div>
+        </div>
+        <div class="flex justify-center mt-8">
+            <button class="mx-1 px-3 py-1 border rounded bg-accent text-white">1</button>
+            <button class="mx-1 px-3 py-1 border rounded">2</button>
+            <button class="mx-1 px-3 py-1 border rounded">3</button>
+            <button class="mx-1 px-3 py-1 border rounded">4</button>
+        </div>
+    </section>
+
+    <!--Promo-->
+    <section class="py-16 px-4 md:px-8 flex flex-col lg:flex-row gap-8">
+        <div class="flex flex-col sm:flex-row bg-[#FBFBFB] rounded-lg items-stretch gap-4 flex-1">
+            <img src="./image/plant5.png" alt="Promo Plant 1" class="w-full sm:w-1/3 object-cover rounded-l-lg" />
+            <div class="flex-1 flex flex-col justify-center text-right px-4 py-4">
+                <h3 class="text-lg md:text-xl font-semibold">SUMMER CACTUS & SUCCULENTS</h3>
+                <p class="text-lgray text-sm mt-2">We are an online plant shop offering a wide range of cheap and trendy
+                    plants.</p>
+                <button
+                    class="mt-4 bg-accent text-white py-2 px-4 ml-auto w-[100px] rounded-md text-xs font-medium shadow-md hover:bg-green-700 transition-all">Find
+                    More</button>
+            </div>
+        </div>
+
+        <div class="flex flex-col sm:flex-row bg-[#FBFBFB] rounded-lg items-stretch gap-4 flex-1">
+            <img src="./image/plant3.png" alt="Promo Plant 2" class="w-full sm:w-1/3 object-cover rounded-l-lg" />
+            <div class="flex-1 flex flex-col justify-center text-right px-4 py-4">
+                <h3 class="text-lg md:text-xl font-semibold">STYLING TRENDS & MUCH MORE</h3>
+                <p class="text-lgray text-sm mt-2">We are an online plant shop offering a wide range of cheap and trendy
+                    plants.</p>
+                <button
+                    class="mt-4 bg-accent text-white py-2 px-4 ml-auto w-[100px] rounded-md text-xs font-medium shadow-md hover:bg-green-700 transition-all">Find
+                    More</button>
+            </div>
+        </div>
+    </section>
+
+    <!--Footer-->
+    <footer>
+        <div class="bg-[#46A3581A] text-white py-6 px-4 md:px-8">
+            <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-6">
+                <!-- Logo -->
+                <div class="flex justify-center md:justify-start">
+                    <img src="./image/logo.png" alt="Logo" class="w-[140px] h-[35px]">
+                </div>
+                <!-- Location -->
+                <div class="flex items-center justify-center gap-2 text-center md:text-left">
+                    <span class="material-symbols-outlined text-accent text-2xl">location_on</span>
+                    <p class="text-sm text-black">70 West Buckingham Ave.<br>Farmingdale, NY 11735</p>
+                </div>
+                <!-- Email -->
+                <div class="flex items-center justify-center gap-2 text-center md:text-left">
+                    <span class="material-symbols-outlined text-accent text-2xl">mail</span>
+                    <p class="text-sm text-black">contact@greenshop.com</p>
+                </div>
+                <!-- Call -->
+                <div class="flex items-center justify-center gap-2 text-center md:text-left">
+                    <span class="material-symbols-outlined text-accent text-2xl">call</span>
+                    <p class="text-sm text-black">+88 01911 717 490</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="py-8 text-center">
+            <p class="text-dgray text-sm">© 2025 GreenShop. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 </body>
 
