--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </select>
             </div>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-8">
+        <div class="grid grid-cols-1 xs:grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-8">
             <div class="bg-white p-4 shadow-sm rounded-md text-left relative h-full flex flex-col">
                 <img src="./image/plant1.png" alt="Plant 1" class="w-[250px] h-[250px] object-cover mx-auto">
                 <p class="mt-4 font-light flex items-center">Barberton Daisy</p>
